@@ -403,7 +403,7 @@ is produced by
 \verb!we conclude !\verb!@!\verb!{thm (concl) conjI}!
 \end{quote}
 Thus you can rearrange or hide premises and typeset the theorem as you like.
-Styles like !(prem 1)! are a general mechanism explained
+Styles like \verb!(prem 1)! are a general mechanism explained
 in \S\ref{sec:styles}.%
 \end{isamarkuptext}%
 \isamarkuptrue%
@@ -518,10 +518,12 @@ The \verb!thm! antiquotation works nicely for single theorems, but
     \begin{quote}
     \verb!@!\verb!{thm (style) thm}!\\
     \verb!@!\verb!{prop (style) thm}!\\
-    \verb!@!\verb!{term (style) term}!
+    \verb!@!\verb!{term (style) term}!\\
+    \verb!@!\verb!{term_type (style) term}!\\
+    \verb!@!\verb!{typeof (style) term}!\\
     \end{quote}
 
-  A ``style'' is a transformation of propositions. There are predefined
+  A ``style'' is a transformation of a term. There are predefined
   styles, namely \verb!lhs! and \verb!rhs!, \verb!prem! with one argument, and \verb!concl!.
   For example, 
   the output
@@ -563,10 +565,9 @@ The \verb!thm! antiquotation works nicely for single theorems, but
     \verb!\end{center}!
   \end{quote}
   Beware that any options must be placed \emph{before}
-  the name of the style, as in this example.
+  the style, as in this example.
 
   Further use cases can be found in \S\ref{sec:yourself}.
-
   If you are not afraid of ML, you may also define your own styles.
   Have a look at module \verb|Term_Style|.%
 \end{isamarkuptext}%
